Texture Compositor node composition artifact (random pixels) #45529

Closed
opened 2015-07-22 22:38:54 +02:00 by Dolphin Dream · 5 comments
Member

System Information
OS: Ubuntu 14.04 (64 bit)
RAM : 7.8 GiB
CPU: Intel® Core™ i5-2400 CPU @ 3.10GHz × 4
GFX: GeForce GT 520/PCIe/SSE2

(the artifact occurs on a Mac OS 10.x 64 bit system)

Blender Version
2.75a (hash: c27589e)

Short description of error
When compositing (two) cloud texture nodes in compositor I get a random pixel artifact over the composition. (see attached image and blend file).
The random pixels are changing with every render (of the same frame) or even with viewport re-display (e.g. if shift+ctrl + lmb on any node to connect it to a view node the re-composition is triggered and the pixels are displayed in a different location). Apparently even when clicking on the timeline (same frame), which will trigger a re-composition, the random point artifact changes to a different pattern. I confirm this is not just a viewport issue, it actually renders with the artifact points as well in the final image.

The included blend file has a somewhat more complex node graph than needed to replicate the bug (I was able to replicate this artifact with an even simpler node graph, but i don't have that blend file anymore).

Exact steps for others to reproduce the error
see attached blend and screenshot.

textureCompositionTest.blend
Screenshot from 2015-07-22 15:44:14.png

**System Information** OS: Ubuntu 14.04 (64 bit) RAM : 7.8 GiB CPU: Intel® Core™ i5-2400 CPU @ 3.10GHz × 4 GFX: GeForce GT 520/PCIe/SSE2 (the artifact occurs on a Mac OS 10.x 64 bit system) **Blender Version** 2.75a (hash: c27589e) **Short description of error** When compositing (two) cloud texture nodes in compositor I get a random pixel artifact over the composition. (see attached image and blend file). The random pixels are changing with every render (of the same frame) or even with viewport re-display (e.g. if shift+ctrl + lmb on any node to connect it to a view node the re-composition is triggered and the pixels are displayed in a different location). Apparently even when clicking on the timeline (same frame), which will trigger a re-composition, the random point artifact changes to a different pattern. I confirm this is not just a viewport issue, it actually renders with the artifact points as well in the final image. The included blend file has a somewhat more complex node graph than needed to replicate the bug (I was able to replicate this artifact with an even simpler node graph, but i don't have that blend file anymore). **Exact steps for others to reproduce the error** see attached blend and screenshot. [textureCompositionTest.blend](https://archive.blender.org/developer/F211729/textureCompositionTest.blend) ![Screenshot from 2015-07-22 15:44:14.png](https://archive.blender.org/developer/F211730/Screenshot_from_2015-07-22_15_44_14.png)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MariusGiurgi

Added subscriber: @MariusGiurgi

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

This issue was referenced by 1e6e3dcbd7

This issue was referenced by 1e6e3dcbd7cd4bc0148062e15229cd284cb30f7d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45529
No description provided.