Fix T45529: Texture Compositor node composition artifact (random pixels)

The issue was caused by the non-threaded texture API used by the node.
While the node itself is single threaded there might be texture nodes
in different execution groups running in parallel.